fixed header list spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ li {
 	text-decoration: none;
 	font-size: 18px;
 	display: inline-block;
-	width: 32%;
+	width: 24%;
 	text-align: center;
 }
 
